--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,11 +6,11 @@ updates:
       interval: "weekly"
       day: "tuesday"
       time: "19:30"
-      timezone: "CET"
+      timezone: "Europe/Oslo"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
       day: "tuesday"
       time: "19:30"
-      timezone: "CET"
+      timezone: "Europe/Oslo"
