--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 pytest>=8.1.1,<8.3.0
 autopep8>=2.1.0,<2.4.0
+flake8
+coverage
 mypy>=1.9.0,<1.11.0
+build
+setuptools>=61.0
+types-setuptools
+wheel
+twine
 bytecore==1.1.2
